src/assets/stylesheets/modern/main/extensions/_glightbox.scss
////
/// Copyright (c) 2025 Zensical and contributors
///
/// SPDX-License-Identifier: MIT
/// Third-party contributions licensed under DCO
///
/// Permission is hereby granted, free of charge, to any person obtaining a
/// copy of this software and associated documentation files (the "Software"),
/// to deal in the Software without restriction, including without limitation
/// the rights to use, copy, modify, merge, publish, distribute, sublicense,
/// and/or sell copies of the Software, and to permit persons to whom the
/// Software is furnished to do so, subject to the following conditions:
///
/// The above copyright notice and this permission notice shall be included in
/// all copies or substantial portions of the Software.
///
/// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
/// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
/// FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL
/// THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
/// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
/// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
/// DEALINGS
////

// ----------------------------------------------------------------------------
// Rules
// ----------------------------------------------------------------------------

// Ensure that the header does not disappear
html.glightbox-open {
  height: 100%;
  overflow: initial;
}

// GLightbox
html .gslide {

  // Description background
  .gslide-description {
    background: var(--md-default-bg-color);
    user-select: text;
  }

  // Description title
  .gslide-title {
    margin-top: 0;
    margin-bottom: px2rem(8px);
    color: var(--md-default-fg-color);
    font-size: px2rem(16px);
  }

  // Description text
  .gslide-desc {
    color: var(--md-default-fg-color--light);
    font-size: px2rem(14px);
  }
}

